[fix] Route of swagger attribute fixed in SaleController.
